--- a/web/src/websitedesign/style.css
+++ b/web/src/websitedesign/style.css
@@ -73,6 +73,7 @@ body {
     border-right: 0.1rem solid #1a6dca;
     padding-right: 5px;
     min-width: 130px;
+    margin-left: 10px;
 }
 
 .capteur-child {
@@ -110,6 +111,7 @@ table {
 /* width */
 .switchbuttons::-webkit-scrollbar {
     width: 10px;
+    height: 10px;
 }
 
 /* Track */
