--- a/web/src/websitedesign/style.css
+++ b/web/src/websitedesign/style.css
@@ -72,7 +72,7 @@ body {
     font-weight: bold;
     border-right: 0.1rem solid #1a6dca;
     padding-right: 5px;
-    min-width: 130px;
+    /*min-width: 150px;*/
     margin-left: 10px;
 }
 
